# my-practices-autotools

simple-project/: .gitignore  INSTALL  Makefile.am  README  autogen.sh  configure.ac
simple-project/src/: Makefile.am
using-gettext/: .gitignore  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  configure.ac
using-gettext/po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  es.po  gettext-client-example.pot  pt.po
using-gettext/src/: Makefile.am  gettext-client-example.c
using-glib/: .gitignore  INSTALL  README  autogen.sh  configure.ac
using-glib/src/: Makefile.am  glib-client-example.c
using-pkg-config/: .gitignore  INSTALL  README  autogen.sh  configure.ac
using-pkg-config/src/: Makefile.am  pkgconfig-client-example.c
