bin_PROGRAMS = hello

hello_SOURCES = hello.c

# For this example, the generated command to compile the hello program was:
#   gcc -DHAVE_CONFIG_H -I. -I..     -g -O2 -MT hello.o -MD -MP -MF .deps/hello.Tpo -c -o hello.o hello.c
#   gcc  -g -O2   -o hello hello.o
# Using the following variables and command in the generated makefile:
#   top_builddir = ..
#   DEPDIR = .deps
#   CC = gcc
#   DEFS = -DHAVE_CONFIG_H
#   DEFAULT_INCLUDES = -I. -I$(top_builddir)
#   CPPFLAGS = 
#   CFLAGS = -g -O2
#   COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
#   CCLD = $(CC)
#   LIBS = 
#   LDFLAGS = 
#   hello_LDADD = $(LDADD)
#   LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
#   $(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
#   $(LINK) $(hello_OBJECTS) $(hello_LDADD) $(LIBS)
